Added French translation from TB (closes #3230)

--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
 <head>
-<!-- CLF 2.0 TEMPLATE VERSION 1.04 | VERSION 1.04 DU GABARIT NSI 2.0 -->
-<!-- PWGSC TEMPLATE VERSION 1.0 | VERSION 1.0 DU GABARIT TPSGC -->
-<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-<!-- TITLE BEGINS | DEBUT DU TITRE -->
+<!-- VERSION 1.04 DU GABARIT NSI 2.0 | CLF 2.0 TEMPLATE VERSION 1.04 -->
+<!-- VERSION 1.0 DU GABARIT TPSGC | PWGSC TEMPLATE VERSION 1.0 -->
+<!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
+<!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>EGD: Capital Projects</title>
-<!-- TITLE ENDS | FIN DU TITRE -->
-<!-- METADATA BEGINS | DEBUT DES METADONNEES -->
+<title>CSE: tarifs</title>
+
+<!-- FIN DU TITRE | TITLE ENDS -->
+<!-- DEBUT DES METADONNEES | METADATA BEGINS -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Environnment; Information;  Index" />
+<meta name="dc.title" content="un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
 
-<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
-<meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dc.language" scheme="ISO639-2/T" content="fra" />
+<meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
+<meta name="dc.publisher" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dc.audience" content=" " />
 <meta name="dc.contributor" content=" " />
 <meta name="dc.coverage" content=" " />
@@ -26,104 +27,100 @@
 <meta name="dc.date.modified" content="2008-11-12" />
 <meta name="dc.format" content=" " />
 <meta name="dc.identifier" content=" " />
-<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-eng.html" />
+<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-fra.html" />
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2008-11-12" />
 
-<meta name="description" content="EGD Leading the Way with ISO 14001" />
-<meta name="keywords" content="Esquimalt Graving Dock, ISO 14001, environment, management, programs, health;, safety" />
+<meta name="description" content="CSE un chef de file en voie vers la certification ISO 14001" />
+<meta name="keywords" content="cale seche d'Esquimalt, ISO 14001, environnement, gestion, programmes, sant&eacute;, s&eacute;curit&eacute;" />
 
-<meta name="pwgsc.contact.email" content="questions@pwgsc.gc.ca" />
-<!-- METADATA ENDS | FIN DES METADONNEES -->
-<!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
+<meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
+<!-- FIN DES METADONNEES | METADATA ENDS -->
+<!-- DEBUT DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS BEGIN -->
 <link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
 <style type="text/css" media="all">
 @import url(/clf20/css/base2.css);
 </style>
-<!-- TEMPLATE SCRIPTS/CSS END | FIN DES SCRIPTS/CSS DU GABARIT -->
 <!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
 <script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
 <script type="text/javascript">
 	/* <![CDATA[ */
 		var params = {
-			lng:"eng",
+			lng:"fra",
 			pngfix:"/clf20/images/inv.gif"
 		};
 		PE.progress(params);
 	/* ]]> */
 	</script>
 <!-- PROGRESSIVE ENHANCEMENT ENDS | FIN DE L'AMELIORATION PROGRESSIVE -->
-<!-- CUSTOM SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS PERSONNALISES -->
 <link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-<!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
-<!-- TEMPLATE PRINT CSS BEGINS | DEBUT DU CSS DU GABARIT POUR L'IMPRESSION -->
 <link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
-<!-- TEMPLATE PRINT CSS ENDS | FIN DU CSS DU GABARIT POUR L'IMPRESSION -->
+<!-- FIN DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS END -->
 </head>
 <body>
 <div class="page">
 	<div class="core">
 		<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-		<!--#include virtual="/clf20/ssi/tete-header-eng.html"-->
+		<!--#include virtual="/clf20/ssi/tete-header-fra.html"-->
 		<!-- HEADER ENDS | FIN DE L'EN-TETE -->
-		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
+		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
-			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-					&gt; EGD: Capital Projects</p>
+			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
+			&gt; CSE: tarifs</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
+			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
+			<!-- DEBUT DU MENU LATERAL GAUCHE | LEFT SIDE MENU BEGINS -->
 			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
+				<!--#include virtual="/clf20/ssi/left-menu-gauche1-fra.html"-->
+				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-fra.html"-->
+				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-fra.html"-->
 			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
+			<!-- FIN DU MENU LATERAL GAUCHE | LEFT SIDE MENU ENDS -->
+			<!-- DEBUT DU CONTENU | CONTENT BEGINS -->
 
 			<div class="center">
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					EGD: Capital Projects 
+					CSE: Projets d'immobilisations
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 
         <p>
-          The Esquimalt Graving Dock has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30 tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April, 2010. The approximate date that the new 30 tonne crane will be in service is the end of July, 2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30 tonne crane for refurbishment and modernization of its motors and drives.  The existing 30 tonne crane will be disassembled piece by piece and placed in dock bottom in Section # 3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44 tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July, 2010.  The contractor for this project will utilize space in dock bottom in Section # 3 as well as the areas adjacent to Section # 3 top side for their work area on this crane.  The refurbishment and modernization of the EGD’s current 30 tonne crane will run from July, 2010 through to approximately November, 2010.  Once our existing 30 tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44 tonne hammerhead crane from the north side of the basin dock.  
+          La cale sèche d'Esquimalt compte un certain nombre de changements prometteurs, tant à l¿étape de planification qu¿à l¿étape expérimentale. Le projet principal sera l¿installation d¿une nouvelle grue à portée variable à deux flèches de 30 tonnes qui sera érigée du côté sud du quai de bassin. La préparation pour l¿érection de la nouvelle grue doit commencer en avril 2010. La date approximative d¿entrée en service de cette nouvelle grue de 30 tonnes est la fin juillet 2010. Après l¿érection et la mise en service de la nouvelle grue du côté sur du quai du bassin les travaux commenceront immédiatement pour le démantèlement de la grue de 30 tonnes existante pour la remise à neuf et la modernisation de ses moteurs et entraînements. La grue de 30 tonnes existante sera démontée pièce par pièce dans le fond de la cale sèche de la section no 3. Elle y sera entièrement inspectée et réparée, au besoin, puis remontée du côté nord du quai de bassin sur les chenilles de notre grue-marteau existante de 44 tonnes. Ces travaux doivent commencer immédiatement après la mise en service de la nouvelle grue vers la fin juillet 2010. L¿entrepreneur du présent projet doit utiliser l¿espace dans le fond de la cale sèche de la section no 3 en plus des zones adjacentes au côté supérieur de la section no 3 pour ses travaux sur cette grue. La remise à neuf et la modernisation de la grue existante de 30 tonnes de la cale sèche d'Esquimalt s¿effectuera de juillet 2010 jusqu¿environ novembre 2010. Lorsque notre grue existante de 30 tonnes sera assemblée et remise en service du côté nord du quai de bassin, les travaux commenceront alors pour l¿enlèvement de notre grue-marteau existante de 44 tonnes du côté nord du quai de bassin.
         </p>
 
-        <p><a href="../files/modernization-plan-eng.pdf" title="Modernization Plan">Preliminary drawing of the work areas.</a></p>
+        <p><a href="../files/modernization-plan-eng.pdf" title="Modernization Plan">Dessin de projet des zones de travaux.</a></p>
 
         <p>
-          In addition to the above projects the Esquimalt Graving Dock is seeking funding for a 100 foot extension of the basin dock east from the east wall of Section # 3.  The answer to our funding request for this work will be known some time in February, 2010.  The 100 foot extension will facilitate extended docking periods for the DND frigate mid life refit project, as well as allow the docking of a number of the larger vessels from the BC Ferries fleet in only one section. This will leave approximately 750 feet of dry dock for other refit and repair work. We understand that the complete closure of Section # 3 will be an inconvenience for all from approximately May, 2010 through to the end of March, 2011 but we think that all would agree that this relatively short term inconvenience, approximately 10 months, will benefit all for the long term with additional dry docking space.
+          En plus des projets susmentionnés, la cale sèche d'Esquimalt est à la recherche de financement en vue d¿une rallonge de 100 pieds au quai de bassin vers l¿est à partir du mur est de la section no 3. La réponse à notre demande de financement en vue de ces travaux sera connue en février 2010. La rallonge de 100 pieds facilitera les périodes prolongées d¿amarrage dans le cadre du projet de prolongation de la durée de vie des frégates du MDN, en plus de permettre l¿amarrage d¿un certain nombre de gros navires de la flotte de traversiers BC Ferries dans une seule section. Il restera ainsi environ 750 pieds de cale sèches pour les autres travaux de remise à neuf et de réparation. Nous comprenons que la fermeture complète de la section no 3 posera des inconvénients pour tous d¿environ mai 2010 jusqu¿à la fin mars 2011 mais nous croyons que tous s¿accorderont sur le fait que ces inconvénients à court terme (environ 10 mois) seront à l¿avantage de tous à long terme en ajoutant des espaces en cale sèche.
         </p>
 
         <p>
-        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.lastoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at (250) 363-8056.  
+        Si vous avez des questions portant sur ce qui précède ou si vous désirez davantage d¿information n'hésitez pas à communiquer avec <a href="mailto:david.lastoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, gestionnaire de l¿exploitation, cale sèche d'Esquimalt, au 250-363-8056.
         </p>
 			</div>
 
-			<!-- CONTENT ENDS | FIN DU CONTENU -->
-			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
+			<!-- FIN DU CONTENU | CONTENT ENDS -->
+			<!-- FIN DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT ENDS -->
+			<!-- DEBUT DU PIED DE LA PAGE | FOOTER BEGINS -->
 			<div class="footer">
 				<div class="footerline"></div>
 				<div class="foot1">
-					<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
-					Date Modified: <span class="date">
+					<!-- DEBUT DE LA DATE DE MODIFICATION | DATE MODIFIED BEGINS -->
+					Date de modification&nbsp;: <span class="date">
 					<!--#config timefmt="%Y-%m-%d"-->
 					<!--#echo var="LAST_MODIFIED"-->
 					</span>
-					<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFICATION -->
+					<!-- FIN DE LA DATE DE MODIFICATION | DATE MODIFIED ENDS -->
 				</div>
-				<!--#include virtual="/clf20/ssi/foot-pied-eng.html"-->
+				<!--#include virtual="/clf20/ssi/foot-pied-fra.html"-->
 			</div>
-			<!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
+			<!-- FIN DU PIED DE LA PAGE | FOOTER ENDS -->
 		</div>
 	</div>
 </div>
