Fixed mispelled email address

--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -104,7 +104,7 @@
         </p>
 
         <p>
-        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.lastoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at (250) 363-8056.  
+        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at (250) 363-8056.  
         </p>
 			</div>
 
