--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -101,7 +101,7 @@
         </p>
 
         <p>
-        Si vous avez des questions portant sur ce qui pr&eacute;c&egrave;de ou si vous d&eacute;sirez davantage d¿information n'h&eacute;sitez pas &agrave; communiquer avec <a href="mailto:david.lastoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, gestionnaire de l¿exploitation, cale s&egrave;che d'Esquimalt, au 250-363-8056.
+        Si vous avez des questions portant sur ce qui pr&eacute;c&egrave;de ou si vous d&eacute;sirez davantage d¿information n'h&eacute;sitez pas &agrave; communiquer avec <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, gestionnaire de l¿exploitation, cale s&egrave;che d'Esquimalt, au 250-363-8056.
         </p>
 			</div>
 
