fixes for Melissa

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -93,28 +93,14 @@
 					Environmental Management
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<div style="clear:right;">
-					<h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym> 14001</h2>
-					<p>The <acronym title="International Organization for Standardization">ISO</acronym> 14001
-						certification is an internationally recognized standard for the development
-						and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
-						Qualifying for this recognition in 2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
-						implemented this management system to help identify and prioritize environmental
-						issues on site.</p>
-					<p>By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
-							Policy</a>, upper management has made a commitment towards the prevention
-							of pollution, the protection of the natural environment and the compliance
-							with applicable environmental regulations and standards. </p>
-					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Top of Page</a> </div>
+				
 				</div>
 				<div class="option2" style="float: right; clear: right;">
 					<h2 id="mpge-ebmp">Environmental Best Management Practices</h2>
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
 						to operate in an environmentally responsible manner. This includes compliance
 						with all applicable environmental regulations and standards. In support
-						of this, the Esquimalt Graving Dock has developed a comprehensive set of
-						Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMPs</acronym>).</p>
+						of this, the Esquimalt Graving Dock has developed a <a href="../files/EGD_EBMP_Manual_(October_6-2010).pdf">comprehensive set of Environmental Best Management </a>Practices (<acronym title="Environmental Best Management Practices">EBMPs</acronym>).</p>
 					<p><acronym title="Environmental Best Management Practices">EBMPs</acronym> are
 						ways of reducing and preventing the discharge of pollutants into the environment
 						through good housekeeping, maintenance, materials management, communications,
@@ -124,7 +110,7 @@
 						as paint removal and surface preparation, painting, engine maintenance
 						and materials handling.</p>
 					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" title="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
-					<p>See <a href="mpge-ebmp-eng.html">Summary sheet of <acronym title="Environmental Best Management Practices">EBMPs</acronym></a>.</p>
+				
 					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
 				</div>
