--- a/env/initiatives-eng.html
+++ b/env/initiatives-eng.html
@@ -157,10 +157,7 @@
 							the risk of impacting the environment, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
 							included guidelines for hazardous materials/waste management in the <acronym title="Esquimalt Graving Dock">EGD's</acronym> Environmental
 							Best Management Practices Manual. </p>
-						<p>As a participant with the Federal government's Green Procurement Program,
-							the <acronym title="Esquimalt Graving Dock">EGD</acronym> is also working
-							towards developing an inventory of alternative, more ecologically friendly
-							products. </p>
+						<p>&nbsp;</p>
 						<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 							Top of Page</a> </div>
 					</div>
