--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -114,7 +114,7 @@
 						related to our identified environmental aspects.</li>
 					<li>Establish and review our programs, objectives and targets to ensure
 						we are meeting our environmental commitments.</li>
-					<li>Communicate openly with our employees, Users, contractors, suppliers,
+					<li>Communicate openly with our employees, Users, tenants, contractors, suppliers,
 						neighbours and other stakeholders regarding our Environmental
 						Management System and the nature of our operations.</li>
 					<li>Educate our employees and the Users of our facility to ensure they are
