--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -91,7 +91,7 @@
 				<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 				Environmental Program
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-				</h1>
+		  </h1>
 			<p style="text-align:center; font-style:italic">It is the goal of the Esquimalt
 				Graving Dock, in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
@@ -124,24 +124,15 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="initiatives-eng.html">Environmental Initiatives</a>
-					<ul style="list-style-type:none">
-						<li><a href="initiatives-eng.html#qa-aq">Air Quality</a></li>
-						<li><a href="initiatives-eng.html#eaux-water">Wastewater and Stormwater</a></li>
-						<li><a href="initiatives-eng.html#solide">Solid Waste Reduction</a></li>
-						<li><a href="initiatives-eng.html#danger-hazard">Hazardous Materials</a></li>
-						<li><a href="initiatives-eng.html#cons">Energy and Water Conservation</a></li>
-						<li><a href="initiatives-eng.html#faune-wildlife">Wildlife Protection</a></li>
 					</ul>
-				</li>
 				<li><a href="interet-interest-eng.html">Articles of Interest</a></li>
 			</ul>
 			<p>If you have any questions or concerns regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
 				Dock, please contact the Environmental Coordinator at:</p>
-			<p>
-				Email: <a href="mailto:daryl.lawes@pwgsc.gc.ca">daryl.lawes@pwgsc.gc.ca</a><br />
-				Telephone: 250-363-6985</p>
+		  <p>
+				Email: <a href="mailto:Melissa.Piasta@pwgsc.gc.ca">Melissa.Piasta@pwgsc.gc.ca</a><br />
+			</p>
 
 		</div>
 
