--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -141,7 +141,7 @@
 					the most environmentally-friendly services. And, thanks to
 					PWGSC, the Esquimalt Graving Dock will be one of the best
 					options.</p>
-				<p><em>Source: Ensemble, Volume 8, No. 5</em></p>
+				<p><em>Source: Ensemble, Volume 8, No. 5 2007</em></p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
