--- a/index-eng.html
+++ b/index-eng.html
@@ -131,11 +131,22 @@
 						<li>Canadian vessels - especially the Department of National Defense and
 							the British Columbia Ferry Corporation.</li>
 					</ul>
-					<p>Our <a href="env/programme-program-eng.html"><acronym title="International Organisation for Standardization">ISO</acronym> 14001
-							environmental management system</a> ensures that work done at the Dock
+					<p>Our ISO 14001
+							environmental management system ensures that work done at the Dock
 							is done in an environmentally responsible manner. We are one of only three
-							multi-user ship repair facilities in the world with this special designation.<br />
-					</p>
+							multi-user ship repair facilities in the world with this special designation.<br /><div style="clear:right;">
+					<h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym> 14001</h2>
+					<p>The <acronym title="International Organization for Standardization">ISO</acronym> 14001
+						certification is an internationally recognized standard for the development
+						and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
+						Qualifying for this recognition in 2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
+						implemented this management system to help identify and prioritize environmental
+						issues on site.</p>
+					<p>By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
+							Policy</a>, upper management has made a commitment towards the prevention
+							of pollution, the protection of the natural environment and the compliance
+							with applicable environmental regulations and standards. </p>
+				  </p>
 				</div>
 			</div>
 
