--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -5,7 +5,7 @@
 		<h2>Did you know?</h2>
 		<ul>
 			<li><acronym title="Esquimalt Graving Dock">EGD</acronym> is one of the few large ship repair facilities in the world who has implemented
-				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a></li>
+				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Environment" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/programme-program-eng.html">More &gt; </a></li>
 		</ul>
 	</li>
 </ul>
