pushing additional changes for Melissa as discussed with adam

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -74,7 +74,8 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
 			&gt;&nbsp;<a href="programme-program-eng.html">Environmental
-			Program</a> &gt; Management </p>
+			Program</a> &gt; Management 
+		</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -86,15 +87,14 @@
 			</div>
 			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
 			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
-
-			<div class="center">
+        	<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 					Environmental Management
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				
-				</div>
+				
 				<div class="option2" style="float: right; clear: right;">
 					<h2 id="mpge-ebmp">Environmental Best Management Practices</h2>
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
