--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -90,9 +90,10 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Environmental Policy Statement <!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+					<img src="../images/env_policy_banner.jpg" alt="" width="476" height="133" />
+					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<div style="float:right; text-align:right; width:218px;"><img src="../images/poli-haut-top-1.jpg" alt="Esquimalt Graving Dock" width="198" height="276" style="padding-left:10px; padding-bottom:5px;" /><img src="../images/poli-haut-top-2.jpg" alt="Esquimalt Graving Dock" width="198" height="123" style="padding-left:10px; padding-bottom:5px;" /><img src="../images/poli-haut-top-3.jpg" alt="Cruise ship in dock" width="198" height="122" style="padding-left:10px; padding-bottom:10px;" />				</div>
+			
 				<div class="option2">
 					<p><strong>It is the goal of the Esquimalt Graving Dock, it partnership
 							with the ship repair industry, to be the premier
@@ -125,19 +126,18 @@
 						and procedures.    </li>
 				</ul>
 				<img src="../images/poli-sig-eng.jpg" alt="Signatures: Regional Director General, PWGSC Pacific Region; General Manager, PWGSC EGD; Operations Coordinator, PWGSC ECG" width="494" height="138" />
-			</div>
+		  </div>
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
 			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
 			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
 			<div class="footer">
 				<div class="footerline"></div>
 				<div class="foot1">
-					<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
+					
 					Date Modified: <span class="date">
-					<!--#config timefmt="%Y-%m-%d"-->
-					<!--#echo var="LAST_MODIFIED"-->
+					July 2009
 					</span>
-					<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFICATION -->
+					
 				</div>
 				<!--#include virtual="/clf20/ssi/foot-pied-eng.html"-->
 			</div>
