removing top of the page references

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -111,8 +111,7 @@
 						and materials handling.</p>
 					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" title="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
 				
-					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Top of Page</a> </div>
+					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"></a> </div>
 				</div>
 				<br />
 				<div style="float: left; clear: right;">
@@ -125,8 +124,7 @@
 					<p><acronym title="Esquimalt Graving Dock">EGD</acronym> staff must also
 						be knowledgeable of the Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMP</acronym>)
 						relating to their work.</p>
-					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" title="" alt="" /><br />
-						Top of Page</a> </div>
+					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"></a> </div>
 				</div>
 				<br />
 				<div class="option2" style="float: right; clear:right;">
@@ -137,8 +135,7 @@
 						in outreach and educational events such as educational site tours, the
 						annual Greater Victoria Bike to Work Week and the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Green Citizen Passport
 						Programs.</p>
-					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Top of Page</a> </div>
+					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"></a> </div>
 				</div>
 				<br />
 				<div style="clear:right;">
