removed border of various divs to make it look cleaner in gestion-management-eng.html

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -95,7 +95,7 @@
 					</h1>
 				
 				
-				<div class="option2" style="float: right; clear: right;">
+				<div  style="float: right; clear: right;">
 					<h2 id="mpge-ebmp">Environmental Best Management Practices</h2>
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
 						to operate in an environmentally responsible manner. This includes compliance
@@ -127,7 +127,7 @@
 					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"></a> </div>
 				</div>
 				<br />
-				<div class="option2" style="float: right; clear:right;">
+				<div  style="float: right; clear:right;">
 					<div class="smallFont" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" title="2004 EGD Bike to Work Week Team" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
 						2004 EGD Bike to Work Week Team</div>
 					<h2 id="participation">Participation and Outreach</h2>
