reword did you know, point to environment main page, reword tariff changes link (refs #4607)

--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -1,13 +1,27 @@
 <!-- ====== /pac/cse-egd/SSI/RIGHT-MENU-DROITE-ENG.HTML ====== -->
 <ul class="rightNav">
+  <li>
+    <h2>Did you know?</h2>
 
-	<li>
-		<h2>Did you know?</h2>
-		<ul>
-			<li><acronym title="Esquimalt Graving Dock">EGD</acronym> is one of the few large ship repair facilities in the world who has implemented
-				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Environment" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/programme-program-eng.html">More &gt; </a></li>
-		</ul>
-	</li>
+    <ul>
+      <li><acronym title="Esquimalt Graving Dock">EGD</acronym> was one of the first large ship repair facilities in the world to implement
+        <acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/programme-program-eng.html">More &gt; </a></li>
+    </ul>
+  </li>
 </ul>
-<!-- <a href="http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=31807"><img src="/pac/cse-egd/images/ISO14001.gif" width="195" height="68" alt="ISO 14001" title="ISO 14001" /></a> -->
+
+<br />
+
+<ul class="rightNav">
+  <li>
+    <h2>What's New</h2>
+
+    <ul>
+      <li><a title="EGD: 30 Tonne Cranes" href="env/cranes-grues-eng.html">30 Tonne Cranes</a></li>
+      <li><a title="EGD: Rates" href="env/tarifs-rates-eng.html">Scheduled changes to the Esquimalt Graving Dock rates</a></li>
+      <li><a title="EGD: Capital Projects" href="env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a></li>
+      <li><a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a></li>
+    </ul>
+  </li>
+</ul>
 <!-- ====== /pac/cse-egd/SSI/RIGHT-MENU-DROITE-ENG.HTML ====== -->
