change wording to reflect that the tariff changes are now implemented (refs #4607)

--- a/env/tarifs-rates-eng.html
+++ b/env/tarifs-rates-eng.html
@@ -94,11 +94,9 @@
 				</h1>
 				<p>A  proposal to revise the tariffs for common use services at the Esquimalt Graving  Dock has been under development since 2007. &nbsp;The tariff proposal was developed in consultation with users in  compliance with the <a href="http://laws.justice.gc.ca/en/U-3.7/108118.html">User Fees Act</a>. Clients  were directly involved in the consultations, and proposed changes were  discussed with users in a working group environment and individually. </p>
 				<p>The tariff proposal was  reviewed by the House Standing Committee on Government Operations and Estimates  on May 28, 2009 and by the Senate Standing Committee on Transportation and  Communication on June 9, 2009. All of the requirements and provisions of the <em>User  Fees Act </em>have now been met.</p>
-				<p>It is anticipated that the  rates will be effective April 1, 2010.&nbsp;  The department is now proceeding with the final stages in the regulatory  approval process which will also establish the official date on which the new  rates will take effect if the proposal receives the required approvals.</p>
-				<p>The department anticipates  implementing the <a href="../files/ANNEX-A-Tariff-of-Dock-charges-eng.pdf">proposed  changes to the rates</a>, over the next several years.&nbsp; The proposed rates are consistent with  previous notices given to users in 2007 and in 2008.</p>
-				<p>Further information will be posted  on this site as it become available.</p>
-				<p>For more information, please  contact the <a href="mailto:jim.milne@pwgsc-tpsgc.gc.ca">Director Esquimalt Graving Dock</a></p>
-				<p>&nbsp;</p>
+				<p>The department has implemented the proposed tariff changes effective April 1, 2010.</p>
+				<p>The proposed rates are consistent with  previous notices given to users in 2007 and in 2008.</p>
+				<p>For more information, please contact the <a href="mailto:jim.milne@pwgsc-tpsgc.gc.ca">Director of the Esquimalt Graving Dock</a></p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
